Fixed SVG Alignment

--- a/themes/whiteglass/assets/sass/whiteglass/_layout.scss
+++ b/themes/whiteglass/assets/sass/whiteglass/_layout.scss
@@ -25,19 +25,24 @@
   float: right;
   line-height: 3rem;
 
-  #theme-toggle {
-    text-decoration: none;
-    cursor: pointer;
+  // Dark Mode
+  svg {
+    display: block;
   }
 
   a {
-    vertical-align: text-top;
+    vertical-align: middle;
+    #theme-toggle {
+      text-decoration: none;
+      cursor: pointer;
+    }
   }
 
+  // Common
   .page-link {
     color: $text-color;
     line-height: $base-line-height;
-    display: inline;
+    display: inline-block;
 
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
@@ -57,7 +62,6 @@
   }
 }
 
-
 /**
  * Site footer
  */
@@ -67,7 +71,6 @@
   color: $grey-color;
   text-align: center;
 }
-
 
 /**
  * Index
@@ -96,7 +99,6 @@
 .page-heading {
   font-size: 1.5em;
 }
-
 
 /**
  * Page content
@@ -177,7 +179,6 @@ p.post-list {
   background-color: $background-gray;
 }
 
-
 /**
  * Posts
  */
@@ -204,7 +205,7 @@ p.post-list {
   padding-bottom: $spacing-unit * 0.5;
 
   h1 {
-    font-size: 2.0rem;
+    font-size: 2rem;
     @include media-query($on-laptop) {
       font-size: 1.6rem;
     }
@@ -235,7 +236,6 @@ p.post-list {
   //   }
   // }
 }
-
 
 /**
  * Pagination
